--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4">
                                     <h2 class="text-white me-4 mb-0">My Story</h2>
 
-                                    <img src="./images/user.jpg" class="avatar-image img-fluid" alt="">
+                                    <img src="./images/user.JPG" class="avatar-image img-fluid" alt="">
                                 </div>
 
                                 <h3 class="pt-2 mb-3">a little bit about Joshua</h3>
