--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <meta name="author" content="TemplateMo">
 
         <title>Portfolio</title>
-
+        <!-- Favicon FILES  -->
+        <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
